# Guidance

./: .gitignore  LICENSE  README.md
apps/api/: pyproject.toml
apps/mobile/: package.json
apps/web/: package.json
docs/: Guidance-C4.drawio
docs/C4 Diagram/: Guidance-C4 (1).drawio  Guidance-C4.drawio
docs/UML/: ItemUML.drawio
docs/wiki/: Brainstorming.md  Timeline_for_openproject.md  timeline.md
docs/wiki/pocketflow_tutorials/pocketflow-visualization/: visualize.py
guidance-deep-research/: pyproject.toml
guidance-deep-research/src/api/: README.md
guidance-deep-research/src/database/: README.md  insert_task.py  test_connection.py
guidance-deep-research/src/guidance_assign/: flow.py  nodes.py
guidance-deep-research/src/guidance_assign/prompts/: prompts.yaml  task_assign.jinja
guidance-deep-research/src/guidance_assign/viz/: task_assign.html  task_assign.json
guidance-deep-research/src/guidance_deep_research/: main.py  utils.py
guidance-deep-research/src/guidance_task_decomposition/: main.py  nodes.py
guidance-deep-research/src/guidance_task_decomposition/prompts/: prompts.yaml  task_decomposition.jinja
guidance-deep-research/src/models/: item.py  task_decomposition.py
guidance-deep-research/src/pocketflow-llm-streaming/: utils.py
guidance-deep-research/src/pocketflow-thinking/: flow.py  main.py  nodes.py
guidance-deep-research/src/pocketflow-thinking/viz/: chain_of_thought.html  chain_of_thought.json
guidance-deep-research/src/thinking_example/: main.py
shared/: pyproject.toml
shared/src/shared_contracts/: README.md  __init__.py  item.py  task_decomposition.py
wiki/: Brainstorming.md
wiki/pocketflow_tutorials/guidance_deep_research/: main.py
(+2 files in other folders)
