[project]
name = "guidance-deep-research"
version = "0.1.0"
description = ""
authors = [
    {name = "Aidan",email = "aidanjh2012@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pocketflow (>=0.0.3,<0.0.4)"
]

[tool.poetry]
packages = [{include = "guidance_deep_research", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
