[project]
name = "shared-contracts"
version = "0.1.0"
description = "Shared Pydantic/Beanie data contracts used across Guidance Python packages."
authors = [
    {name = "Aidan",email = "aidanjh2012@gmail.com"}
]
readme = "src/shared_contracts/README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic (>=2.0.0,<3.0.0)",
    "beanie (>=1.23.0,<2.0.0)",
    "motor (>=3.0.0,<4.0.0)"
]

[tool.poetry]
packages = [{include = "shared_contracts", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"