[project]
name = "guidance-api"
version = "0.1.0"
description = "Guidance backend API."
authors = [
    {name = "Aidan",email = "aidanjh2012@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "shared-contracts",
    "guidance-agents"
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
shared-contracts = {path = "../../shared", develop = true}
guidance-agents = {path = "../../packages/agents", develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"